--- a/ComingSoon.html
+++ b/ComingSoon.html
@@ -14,7 +14,7 @@
     <div class="banner">
     <br>
       <div class = "bannerH2">
-        <buttonBanner onclick="location.href='home.html'">
+        <buttonBanner onclick="location.href='index.html'">
           Goedjen Research Website
         <div class="bannerH1">
           Coming Soon!
@@ -27,7 +27,7 @@
 </div>
 
 <div class="topnav" id="myTopnav">
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <div class="dropdown">
         <button class="dropbtn" href="currentprojects.html">Research Interests 
           <i class="fa fa-caret-down"></i>
