--- a/Master.html
+++ b/Master.html
@@ -9,31 +9,29 @@
 
 <body>
 
-<div class = "row">
-  <div class="ban-12" style="text-align: center">
-    <div class="banner">
-    <br>
-      <div class = "bannerH2">
-        <buttonBanner onclick="location.href='home.html'">
-          Goedjen Research Website
-        <div class="bannerH1">
-          Current Research Focus
+  <div class = "row">
+    <div class="ban-12" style="text-align: center">
+        <div class="banner">
+            <br>
+            <h1 align="center" class="bannerH1">
+              <buttonBanner onclick="location.href='home.html'"> Grant Goedjens's Personal Research Website</buttonBanner>
+            </h1>
+            <p align="center" class="bannerText">
+              Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group!
+            </p>
+            <br>
         </div>
-        </buttonBanner> 
-      </div>
-    <br>
     </div>
-  </div>
 </div>
 
 <div class="topnav" id="myTopnav">
     <a href="home.html">Home</a>
     <div class="dropdown">
-        <button class="dropbtnActive" href="currentprojects.html">Research Interests 
+        <button class="dropbtn" href="currentprojects.html">Research Interests 
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a class = "dropdownactive" href="currentprojects.html">What are Neonicotinoids and Fiproles?</a>
+          <a href="currentprojects.html">What are Neonicotinoids and Fiproles?</a>
           <a href="ComingSoon.html">Pesticides in Surface Water</a>
           <a href="ComingSoon.html">Pesticides in Groundwater</a>
           <a href="ComingSoon.html">Pesticides in Engineered Treatment Systems</a>
@@ -63,16 +61,28 @@
 
 <br>
 
-<div style="margin-left: 30pt;margin-right:15pt"> <!-- Set margins --> 
 
-<!----------------------------------------------------------------------------------------------------------------------->
-<!-- Menu: Research Interest --> 
+<div style="margin-left: 15pt;margin-right:15pt">
+
+<div class="col-12" style="align-self:center;">
+  <div class="column" style="align-self: center;">
+    <img src="./Figures/Goldy.png" alt="UMN Goldy M Logo" style="width:35vw; padding-left: 3%;">
+    <img src="./Figures/NCPhoto.png" alt="Grant Goejen" style="width:26.5vw">
+    <img src="./Figures/DoubleT.png" alt="Texas Tech Double T" style="width:22vw">
+  </div>
+</div>
+<br>
+
+<h1>About Me</h1>
+<hr><hr><br>
+I am a current doctoral candidate with the Arnold Research laboratory at the University of Minnesota Department of Civil, Environmental and Geo Engineering and a certified EIT in the states of Minnesota and Texas. I hail from the great state of Texas where I studies Environmental Engineering at Texas Tech University where i received my Masters and Bachelors of Environmental Engineering. After I complete my work here at UMN I hope to continue my work as a post-doctoral scholar before going to work as a subject expert in hazardous waste site investigation and remediation. My current research (<a href="currentprojects.html">highlighted here</a>) focuses on environmental fate and transport of two classes of insecticides: <b><em>Neonicotinoids and Fipronil</em></b>. My research aims to identify the extent of neonicotinoid and fipronil presence in natural surface and groundwater and soil systems and track their degradation and removal through different treatment and remediation strategies.
+<br><br>
+
+
 
 <h1><a>Research Interests</a></h1>
-<hr><hr>
 
-<!----------------------------------------------------------------------------------------------------------------------->
-<!-- Menu: Research Interest --> 
+<hr><hr>
 
 <br>
 My research focuses on occurrence and fate of first generation of neonicotinoids (i.e. classical neonicotinoids) and  fipronil insecticides in environs. My main research focuses include:
@@ -88,46 +98,46 @@ My research focuses on occurrence and fate of first generation of neonicotinoids
 
 <br>
 
-<!----------------------------------------------------------------------------------------------------------------------->
-<!-- Background Information-->
-
+<br>
 <h2>What are Neonicotinoids?</h2>
-<hr><hr>
+<hr>
 <br>
 
+
 <p align="center">
-  <img src="./Figures/Neonics.png" width = "100%"/> <!-- Neonic structures Image -->
+  <img src="./Figures/Neonics.png" width = "100%"/>
 </p><br>
 
 "Neo" meaning "new" and nicotinoids meaning "Nicotine-Like":
-Neonicotinoids are a suite of systemic pesticides first derived from nicotine in the early 1990's and are now one of the most frequently-applied pesticides in the world! The most common neonicotinoids include:<b><em>Imidacloprid, Clothianidin, Thiamethoxam, Thiacloprid, and Acetamiprid</em></b>. Chaces are, if you've eaten produce or food produced using grain in the last 30 years then you've likely eaten something containing neonicotinoids! 
+Neonicotinoids are a suite of systemic pesticides first derived from nicotine in the early 1990's and are now one of the most frequently-applied pesticides in the world! The most common neonicotinoids include:<b><em>Imidacloprid, Clothianidin, Thiamethoxam, Thiacloprid, and Acetamiprid</em></b>. Chances are if you've eaten produce or food produced using grain in the last 30 years, then chances are you've eaten something containing neonicotinoids! 
 
 <br><br>
 
 <p align="center">
   <img src= "./Figures/Sales.png" width = "50%"/>
-  <p align = "center"> (Minnesota Dept. Agriculture 2019)</p> <!--  -->
+  <p align = "center"> (Minnesota Dept. Agriculture 2019)</p>
 </p><br>
 
-Neonicotinoids are by-far the most popular pesticide used in Minnesota agriculture, 90,000 pounds of pure product sold in 2019 alone; The most common applications of neonicotinoids include:
+Neonicotinoids are by-far the most popular pesticide used in Minnesota agriculture With 90,000 pounds of pure product sold in 2019 alone. The most common applications of neonicotinoids include:
 
 <br><br>
 <ul.2>
-  <li>Seed coatings, spray treatments, and soil treatments for agricultural operations,</li>
-  <li>direct injections for the spot treatment of nuisance diseases in woody plants,</li>
+  <li>Seed coatings, spray treatments, and soil treatments for agricultural operations,
+- direct injections for the spot treatment of nuisance diseases in woody plants,</li>
   <li>termite prevention and wood preservation,</li>
   <li>flea and tick medications,</li>
   <li>bedbug treatments, </li>
   <li>and more!</li>
 </ul.2> <br>
 
-Neonicotinoids are a systemic pesticide, meaning that instead of just hanging around on the surface of the plant or in the soil, the insecticides are taken up and metabolized by the plant! Just like nicotine, neonicotinoids bind to the nicotinic acetylcholine receptor in the central nervous system. While this has a limited reaction in larger mammals, this can cause paralysis, seizures, and eventually death in insects! Ideally that would mean that neonicotinoids should be taken up and trapped in the body of the plant and only effect smaller pest insects without effecting larger organisms; Unfortunately that is often not the case. While much of the applied insecticides do remain in the body of the plant, it is not uncommon to find them where they shouldn't be! Our lab has detected them at appreciable concentrations all over, including in many of Minnesota's lakes, rivers, and springs. We even find them in waste water and drinking water plants! To learn more, check out our paper on <a href="https://hdl.handle.net/11299/220617"><it>Neonicotinoids in Minnesota Surface Waters</it></a> and take a look at my latest poster to be presented at the 2022 Gordon Research Conference on Water Chemistry! That's not all, Neonicotinoids have been found in <a href = "https://doi.org/10.1021/jf501397m">grocery store produce</a>,
- <a href = "https://doi.org/10.1016/j.jeem.2020.102320">agricultural products</a>, <a href = "https://doi.org/10.1016/j.biocontrol.2009.09.001">non-target insects</a>, <a href = "https://doi.org/10.1016/j.jchromb.2015.03.016">honey</a>, <a href = "https://doi.org/10.1021/jf404100x">tea</a>, <a href = "https://link.springer.com/article/10.1007/s10646-012-0863-x">pollinators</a>, <a href = "https://doi.org/10.1016/j.envpol.2018.04.144">human bodily fluids</a>, <a href = "https://doi.org/10.1016/j.ecoenv.2021.112001">blood</a>, <a href = "https://doi.org/10.1016/j.scitotenv.2021.151407">seminal fluid</a>, and in <a href = "https://doi.org/10.1016/j.scitotenv.2021.151806">pregnant women</a>; Just about everything that comes into contact with pesticides, directly or indirectly, seems to contain some neonicotinoids.
+Neonicotinoids are a systemic pesticide, meaning that instead of just hanging around on the surface of the plant or in the soil, the insecticides are taken up and metabolized by the plant! Just like nicotine, neonicotinoids bind to the nicotinic acetylcholine receptor in the central nervous system. While this has a limited reaction in larger mammals, this can cause paralysis, seizures, and eventually death in insects! Ideally that would mean that neonicotinoids should be taken up and trapped in the body of the plant and only effect smaller pest insects without effecting larger organisms; Unfortunately that is often not the case. While much of the applied insecticides do remain in the body of the plant, it is not uncommon to find them where they shouldn't be! Our lab has detected them at appreciable concentrations all over, including in many of Minnesota's lakes, rivers, and springs. We even find them in waste water and drinking water plants! To learn more, check out our paper on <a href="https://hdl.handle.net/11299/220617"><it>Neonicotinoids in Minnesota Surface Waters</it></a> and take a look at my latest poster to be presented at the 2022 Gordon Research Conference on Water Chemistry! That not all, Neonicotinoids have been found in <a href = "https://doi.org/10.1021/jf501397m">grocery store produce</a>,
+ <a href = "https://doi.org/10.1016/j.jeem.2020.102320">agricultural products</a>, <a href = "https://doi.org/10.1016/j.biocontrol.2009.09.001">non-target insects</a>, <a href = "https://doi.org/10.1016/j.jchromb.2015.03.016">honey</a>, <a href = "https://doi.org/10.1021/jf404100x">tea</a>, <a href = "https://link.springer.com/article/10.1007/s10646-012-0863-x">pollinators</a>, <a href = "https://doi.org/10.1016/j.envpol.2018.04.144">human bodily fluids</a>, <a href = "https://doi.org/10.1016/j.ecoenv.2021.112001">blood</a>, <a href = "https://doi.org/10.1016/j.scitotenv.2021.151407">seminal fluid</a>, and in <a href = "https://doi.org/10.1016/j.scitotenv.2021.151806">pregnant women</a>. Just about everything that comes into contact pesticides directly or indirectly seems to have at least a bit of neonicotinoid in them.
+
 
 <br><br>
 <h2>What is Fipronil?</h2>
 
-<hr><hr>
+<hr>
 <br>
 
 <p align="center">
@@ -152,16 +162,12 @@ Unlike neonicotinoids, however, fipronil is a broad-spectrum insecticide which c
 
 <br><br>
 <h2>Environmental Fate</h2>
-
-<hr><hr>
 <br>
-  <div align="center" class = "parent">
-    <img class="imageBottom" src="./Figures/Slide38_Blank.png" width = "100%"/>
-    <input type="image" id="animationButton"" class="imageTopButton" src="./Figures/beeTrauma.svg"/>
-    <img style="left:2%; top:23%"" class ="imageTopDeadHidden" src="./Figures/beeDead1.png">
-    <img style="left:50%"" class ="imageTopDeadHidden" src="./Figures/beeDead1.png">
-    <img style="left: 90%"" class ="imageTopTraumaHidden" src="./Figures/beeTrauma2.png">
-  </div>
+<hr><hr>
+
+<p align="center">
+  <img src="./Figures/Slide38.jpeg" width = "80%"/>
+</p>
 
 <br>
 <h3><em>Neonicotinoids</em></h3>
@@ -176,20 +182,53 @@ Fipronil has a comparatively lower solubility in water and significantly higher 
 
 <br><br>
 <h2>Why Should You Care?</h2>
-<hr>
-<hr>
+<br>
+<hr><hr>
 <br>
 
 While neonicotinoids are found in a huge variety of foods, they are at <b><em>very</em></b> low concentrations - we're talking ng/L and ng/kg concentrations! While the harmful dosage is generally in the ug/kg range. That being said, not a whole lot is understood about neonicotinoid toxicity towards humans - so keep yourself informed on the latest research and always wash your produce!
 
 The widespread occurrence of neonicotinoids, even at these low concentrations, are not something that should be ignored, however. While these low concentrations of insecticides aren't believed to be harmful to humans, they can wreck havoc on non-target insects and pollinators, including bees. It has been such a prevalent issue that the European Union even <a href="https://ec.europa.eu/food/plants/pesticides/approval-active-substances/renewal-approval/neonicotinoids_en">banned the use of neonicotinoids for agricultural production in 2013</a>. So while we don't have to worry about direct toxicity to humans, we certainly should begin looking  for less harmful alternatives to help protect our pollinator friends!
 
-<br><br>
-<hr>
+
+<h1>Recent Awards</h1>
+<hr><hr>
 <br>
 
-Last Updated: 2022.08.23
+Thank you to the <a href = "https://www.compostfoundation.org/Research/College-Scholarships">Compost Research and Educational Foundation</a> for their generous contributions in recognition of my research on pesticide fate in commercial composting operations!
 
+<br>
+<h1>Related Publications</h1>
+<hr><hr>
+<br>
+
+Take a look at the interesting work going on in the <a href = "https://williamarnold.org">Arnold Lab Group</a>! Our latest work are listed below:
+<br>
+<br>
+Berens, M.B. 2020. <a href = "https://hdl.handle.net/11299/220617"><em>Exploring the Reactions and Presence of Munitions Compounds and Insecticides in Aquatic Systems</em></a> [Doctoral Disserdation, University of Minnesota]. University of Minnesota Digital Conservatory.
+<br>
+<br>
+Berens, M.B., Capel, P.D., Arnold, W.A. 2021. <a href = "https://setac.onlinelibrary.wiley.com/doi/10.1002/etc.4959"><em>Neonicotinoid Insecticides in Surface Water, Groundwater, and Wastewater across Land Use Gradients and Potential Effects.</em></a> Environ. Tox. Chem. 40(4)1017-1033. Open Access. 
+<a href = "https://doi.org/10.13020/760y-wc14">Download the data!</a>
+<br>
+<br>
+Todey, S.A., Fallon, A.M., Arnold, W.A. <a href = "https://doi.org/10.1002/etc.4959"><em>Neonicotinoid insecticide hydrolysis and photolysis: Rates and residual toxicity.</em></a> Environ. Toxicol. Chem.  37(11), 2797-2809. Data repository for UMN data set. Open Access.
+<a href = "https://doi.org/10.13020/D6XQ2S">Download the data!</a>
+
+<h1>Contact Information</h1>
+<hr><hr>
+<br>
+<h2>Email</h2>
+<br>
+Questions about my research? Reach out to me by <a href = "mailto:Goedj011@umn.edu">email</a>
+<br><br>
+<h2>Arnold Lab Website</h2>
+<br>
+See the latest work going on our <a href = "https://williamarnold.org">lab website</a>
+
+<br><br>
+<hr>
+Last Updated: 2022.08.23
 <br><br>
 
 </div>
