--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
 </head>
 
 <body>
-
-  <div class = "row">
+<div class = "row">
     <div class="ban-12" style="text-align: center">
         <div class="banner">
             <br>
             <h1 align="center" class="bannerH1">
-              <buttonBanner onclick="location.href='home.html'"> Grant Goedjens's Personal Research Website</buttonBanner>
+              <buttonBanner onclick="location.href='index.html'"> Grant Goedjens's Personal Research Website
+                <p align="center" class="bannerText">
+                  Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group!
+                </p>
+              </buttonBanner>
             </h1>
-            <p align="center" class="bannerText">
-              Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group!
-            </p>
             <br>
         </div>
     </div>
 </div>
 
+
 <div class="topnav" id="myTopnav">
-    <a href="home.html">Home</a>
+    <a class="active" href="index.html">Home</a>
     <div class="dropdown">
         <button class="dropbtn" href="currentprojects.html">Research Interests 
           <i class="fa fa-caret-down"></i>
@@ -61,7 +62,6 @@
 
 <br>
 
-
 <div style="margin-left: 15pt;margin-right:15pt">
 
 <div class="col-12" style="align-self:center;">
@@ -75,145 +75,62 @@
 
 <h1>About Me</h1>
 <hr><hr><br>
-I am a current doctoral candidate with the Arnold Research laboratory at the University of Minnesota Department of Civil, Environmental and Geo Engineering and a certified EIT in the states of Minnesota and Texas. I hail from the great state of Texas where I studies Environmental Engineering at Texas Tech University where i received my Masters and Bachelors of Environmental Engineering. After I complete my work here at UMN I hope to continue my work as a post-doctoral scholar before going to work as a subject expert in hazardous waste site investigation and remediation. My current research (<a href="currentprojects.html">highlighted here</a>) focuses on environmental fate and transport of two classes of insecticides: <b><em>Neonicotinoids and Fipronil</em></b>. My research aims to identify the extent of neonicotinoid and fipronil presence in natural surface and groundwater and soil systems and track their degradation and removal through different treatment and remediation strategies.
+I am currently a doctoral candidate with the Arnold Research laboratory at the University of Minnesota Department of Civil, Environmental and Geo Engineering (anticipated graduation: June 2023) and a certified EIT in the states of Minnesota and Texas. I hail from Texas where I studied Environmental Engineering at Texas Tech University where I received my Masters and Bachelors of Environmental Engineering. After I complete my work here at UMN I hope to continue my work as a post-doctoral scholar before going to work as a subject expert in hazardous waste site investigation and remediation. My current research (<a href="currentprojects.html">highlighted here</a>) focuses on environmental fate and transport of two classes of insecticides: <b><em>Neonicotinoids and Fipronil</em></b>. My research aims to identify the extent of neonicotinoid and fipronil presence in natural surface and groundwater and soil systems and track their degradation and removal through different treatment and remediation strategies.
 <br><br>
 
-
+<div class = "attn">
+  <h1 class = "attnH"> Attention Employers!</h1>
+  <center>
+    <div class = "attnText"> 
+      I am now seeking post-graduation employment opportunities beginning in the summer of 2023. If you have an interest in my work and are seeking new engineering or chemists to build you team, please take a look at my <a href="cv.html" style="color:aqua">circum vitae</a> and contact me via <a href="mailto:goedj011@umn.edu?subject=Post-Graduation Employment Opportunity" style="color:aqua">email</a> for more information! 
+    </div>
+  </center>
+</div>
 
 <h1><a>Research Interests</a></h1>
 
 <hr><hr>
 
 <br>
-My research focuses on occurrence and fate of first generation of neonicotinoids (i.e. classical neonicotinoids) and  fipronil insecticides in environs. My main research focuses include:
-<br><br>
-<ul.2>
+My research focuses on occurrence and fate of first generation of neonicotinoids (i.e. classical neonicotinoids) and nipronil in the environment. My research focus includes:
+
+<br>
+<div class = "col-12">
+<ul>
   <li>Fate in surface water systems.</li>
   <li>Fate in groundwater systems.</li>
   <li>Transport processes via surface runoff and groundwater infiltration.</li>
   <li>Fate and removal by conventional and advanced drinking water treatment plants. </li>
   <li>Occurrence, fate, and removal by activated sludge and membrane bio reactor-equipped (MBR) waste water treatment plants.</li>
   <li>Occurrence, fate, and degradation by industrial and residential-scale composting operations.</li>
-</ul.2>
-
-<br>
-
-<br>
-<h2>What are Neonicotinoids?</h2>
-<hr>
-<br>
+</ul>
+</div>
 
 
-<p align="center">
-  <img src="./Figures/Neonics.png" width = "100%"/>
-</p><br>
 
-"Neo" meaning "new" and nicotinoids meaning "Nicotine-Like":
-Neonicotinoids are a suite of systemic pesticides first derived from nicotine in the early 1990's and are now one of the most frequently-applied pesticides in the world! The most common neonicotinoids include:<b><em>Imidacloprid, Clothianidin, Thiamethoxam, Thiacloprid, and Acetamiprid</em></b>. Chances are if you've eaten produce or food produced using grain in the last 30 years, then chances are you've eaten something containing neonicotinoids! 
-
-<br><br>
-
-<p align="center">
-  <img src= "./Figures/Sales.png" width = "50%"/>
-  <p align = "center"> (Minnesota Dept. Agriculture 2019)</p>
-</p><br>
-
-Neonicotinoids are by-far the most popular pesticide used in Minnesota agriculture With 90,000 pounds of pure product sold in 2019 alone. The most common applications of neonicotinoids include:
-
-<br><br>
-<ul.2>
-  <li>Seed coatings, spray treatments, and soil treatments for agricultural operations,
-- direct injections for the spot treatment of nuisance diseases in woody plants,</li>
-  <li>termite prevention and wood preservation,</li>
-  <li>flea and tick medications,</li>
-  <li>bedbug treatments, </li>
-  <li>and more!</li>
-</ul.2> <br>
-
-Neonicotinoids are a systemic pesticide, meaning that instead of just hanging around on the surface of the plant or in the soil, the insecticides are taken up and metabolized by the plant! Just like nicotine, neonicotinoids bind to the nicotinic acetylcholine receptor in the central nervous system. While this has a limited reaction in larger mammals, this can cause paralysis, seizures, and eventually death in insects! Ideally that would mean that neonicotinoids should be taken up and trapped in the body of the plant and only effect smaller pest insects without effecting larger organisms; Unfortunately that is often not the case. While much of the applied insecticides do remain in the body of the plant, it is not uncommon to find them where they shouldn't be! Our lab has detected them at appreciable concentrations all over, including in many of Minnesota's lakes, rivers, and springs. We even find them in waste water and drinking water plants! To learn more, check out our paper on <a href="https://hdl.handle.net/11299/220617"><it>Neonicotinoids in Minnesota Surface Waters</it></a> and take a look at my latest poster to be presented at the 2022 Gordon Research Conference on Water Chemistry! That not all, Neonicotinoids have been found in <a href = "https://doi.org/10.1021/jf501397m">grocery store produce</a>,
- <a href = "https://doi.org/10.1016/j.jeem.2020.102320">agricultural products</a>, <a href = "https://doi.org/10.1016/j.biocontrol.2009.09.001">non-target insects</a>, <a href = "https://doi.org/10.1016/j.jchromb.2015.03.016">honey</a>, <a href = "https://doi.org/10.1021/jf404100x">tea</a>, <a href = "https://link.springer.com/article/10.1007/s10646-012-0863-x">pollinators</a>, <a href = "https://doi.org/10.1016/j.envpol.2018.04.144">human bodily fluids</a>, <a href = "https://doi.org/10.1016/j.ecoenv.2021.112001">blood</a>, <a href = "https://doi.org/10.1016/j.scitotenv.2021.151407">seminal fluid</a>, and in <a href = "https://doi.org/10.1016/j.scitotenv.2021.151806">pregnant women</a>. Just about everything that comes into contact pesticides directly or indirectly seems to have at least a bit of neonicotinoid in them.
-
-
-<br><br>
-<h2>What is Fipronil?</h2>
-
-<hr>
-<br>
-
-<p align="center">
-  <img src="./Figures/Fip.png" width = "25%"/>
-</p><br>
-
-Fipronil and it's degradation products are phenylpyrazole insecticides commonly used in agriculture. First derived in 1996, fipronil is used at much lower rates than neonicotinoids and are typically focused in urban and residential areas. Common uses include:
-
-<br><br>
-<ul.2>
-  <li>spray treatments for agricultural operations,</li>
-  <li>direct injections for the spot treatment of nuisance diseases in woody plants,</li>
-  <li>termite prevention and wood preservation,</li>
-  <li>flea and tick medications,</li>
-  <li>bedbug treatments, </li>
-  <li>laws and turf care,</li>
-  <li>and more!</li>
-</ul.2>
-<br>
-
-Unlike neonicotinoids, however, fipronil is a broad-spectrum insecticide which can effect organisms indiscriminately. Fipronil blocks the gabaa-gated chloride (Cl-) channels in the central nervous system of any organism unfortunate enough to be exposed and results in paralysis, seizures, and death. The lower specificity of fipronil means that a much wider suite of organisms may, and are, negatively effected. Fipronil has had observational effects on a large variety of organisms, and while it generally is not toxic to humans at low concentrations, has significantly impacted smaller non-target organisms including <a href = "https://doi.org/10.1016/j.envpol.2019.05.067">fish and aquatic organisms</a> and <a href = "https://doi.org/10.1016/j.scitotenv.2021.148678">pollinators</a>.
-
-<br><br>
-<h2>Environmental Fate</h2>
-<br>
-<hr><hr>
-
-<p align="center">
-  <img src="./Figures/Slide38.jpeg" width = "80%"/>
-</p>
-
-<br>
-<h3><em>Neonicotinoids</em></h3>
-
-Neonicotinoids are highly soluble in water and experience high rates of transport as surface runoff or infiltration. Once in the water, they can survive thousands of days before degrading into one of their many degradation products and can be conveyed significant distances through streams and in groundwater, reemerging in lakes or in natural springs. In the water they can undergo hydrolysis, in which water molecules react with them to form dozens of primary transformation products. If they don't end up in water, sediment, particularly high-organic sediment, has shown to have a high sorption capacity for neonicotinoids; Meaning that neonicotinoids can hang around on soil and sediment particles until they are metabolized by bacteria or swept away in water. If left on the surface, neonicotinoids are susceptible to direct and indirect photolysis and can form a suite of products with many of the same characteristics, including similar toxicity. Finally, the neonicotinoids that make it into the body of the plant may remain in the plant and either end up in the final agricultural product and be processed into food products of remain in the root systems and either be composted or left to degrade in the field. Of course, nuisance insects may also eat the plants and be effected, but non-target insects such as pollinators may eat pesticide-containing plant material and be negatively impacted or return pollen to the hive where it may end up in they honey. 
-Luckily, though, neonicotinoids have very small Henry's constants and do not volatilize regularly into the air - one less thing for us to worry about!
-
-<br><br>
-<h3><em>Fipronil</em></h3> 
-
-Fipronil has a comparatively lower solubility in water and significantly higher sorption to soils and sediments. Fipronil's moderately hydrophobic structure means that it readily partitions to soil and has limited transport in water and air. Strong sorption to solids leads to a high fraction of fipronil retained in soil, sediment, and compost with few available routes from horizontal transfer to other media. That being said, fipronil has been observed at lower concentrations but at similar rates to neonicotinoids and other insecticides and it believed to use particulate in water and air to hitch a ride in streams and wind to contaminated secondary locations. Fipronil has relatively low rates of photolysis, hydrolysis, and microbial degradation in sediment and water. WHen degradation products do form, they are often eaully as toxic and have similar half-lives ranging in the thousands of days.
-
-<br><br>
-<h2>Why Should You Care?</h2>
+<h1>Knowledgebase</h1>
 <br>
 <hr><hr>
 <br>
+I have a wide variety of interests that covers a large knowledge base. My previous and current work emcompoases a large variety of fields, inlcuding topics such as:
 
-While neonicotinoids are found in a huge variety of foods, they are at <b><em>very</em></b> low concentrations - we're talking ng/L and ng/kg concentrations! While the harmful dosage is generally in the ug/kg range. That being said, not a whole lot is understood about neonicotinoid toxicity towards humans - so keep yourself informed on the latest research and always wash your produce!
-
-The widespread occurrence of neonicotinoids, even at these low concentrations, are not something that should be ignored, however. While these low concentrations of insecticides aren't believed to be harmful to humans, they can wreck havoc on non-target insects and pollinators, including bees. It has been such a prevalent issue that the European Union even <a href="https://ec.europa.eu/food/plants/pesticides/approval-active-substances/renewal-approval/neonicotinoids_en">banned the use of neonicotinoids for agricultural production in 2013</a>. So while we don't have to worry about direct toxicity to humans, we certainly should begin looking  for less harmful alternatives to help protect our pollinator friends!
-
-
-<h1>Recent Awards</h1>
-<hr><hr>
+<div class = "col-12">
+<ul>
+  <li>Environmental Chemistry, Engineering, Toxicology,</li>
+  <li>Quantitative Analytical Techniques (HPLC, UHPLC, MS, LC-MS, LC-MS/MS, LC-MS-QTOF, UvVis), </li>
+  <li>Computational Statistic (bayesian and frequentist) and Modeling (R, Python), </li>
+  <li>Computational Hydralucis and Hydrology,</li>
+  <li>Fate and Transport Modeling,</li>
+  <li>CAD Drafting and GIS Analysis, </li>
+  <li>Database and Information Management,</li>
+  <li>Laboratory Management, </li>
+  <li>Field Operations,</li>
+  <li>Community Engagement,</li>
+  <li>Collaboration with Federal, State, and Local Municipal Agencies.</li>
+</ul>
 <br>
-
-Thank you to the <a href = "https://www.compostfoundation.org/Research/College-Scholarships">Compost Research and Educational Foundation</a> for their generous contributions in recognition of my research on pesticide fate in commercial composting operations!
-
-<br>
-<h1>Related Publications</h1>
-<hr><hr>
-<br>
-
-Take a look at the interesting work going on in the <a href = "https://williamarnold.org">Arnold Lab Group</a>! Our latest work are listed below:
-<br>
-<br>
-Berens, M.B. 2020. <a href = "https://hdl.handle.net/11299/220617"><em>Exploring the Reactions and Presence of Munitions Compounds and Insecticides in Aquatic Systems</em></a> [Doctoral Disserdation, University of Minnesota]. University of Minnesota Digital Conservatory.
-<br>
-<br>
-Berens, M.B., Capel, P.D., Arnold, W.A. 2021. <a href = "https://setac.onlinelibrary.wiley.com/doi/10.1002/etc.4959"><em>Neonicotinoid Insecticides in Surface Water, Groundwater, and Wastewater across Land Use Gradients and Potential Effects.</em></a> Environ. Tox. Chem. 40(4)1017-1033. Open Access. 
-<a href = "https://doi.org/10.13020/760y-wc14">Download the data!</a>
-<br>
-<br>
-Todey, S.A., Fallon, A.M., Arnold, W.A. <a href = "https://doi.org/10.1002/etc.4959"><em>Neonicotinoid insecticide hydrolysis and photolysis: Rates and residual toxicity.</em></a> Environ. Toxicol. Chem.  37(11), 2797-2809. Data repository for UMN data set. Open Access.
-<a href = "https://doi.org/10.13020/D6XQ2S">Download the data!</a>
+For more information, I urge you to take a look at my circum vitae <a href="cv.html">here!</a>
+</div>
 
 <h1>Contact Information</h1>
 <hr><hr>
@@ -228,7 +145,10 @@ See the latest work going on our <a href = "https://williamarnold.org">lab websi
 
 <br><br>
 <hr>
+<br>
+
 Last Updated: 2022.08.23
+
 <br><br>
 
 </div>
