--- a/presentations.html
+++ b/presentations.html
@@ -14,7 +14,7 @@
       <div class="banner">
       <br>
         <div class = "bannerH2">
-          <buttonBanner onclick="location.href='home.html'">
+          <buttonBanner onclick="location.href='index.html'">
             Goedjen Research Website
           <div class="bannerH1">
             Recent Presentations and Publications
@@ -29,7 +29,7 @@
 
 
 <div class="topnav" id="myTopnav">
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <div class="dropdown">
         <button class="dropbtn">Research Interests 
         </button>
