rewording text and reformatting images

--- a/index.html
+++ b/index.html
@@ -62,20 +62,33 @@
 
 <br>
 
-<div style="margin-left: 15pt;margin-right:15pt">
+<div class="col-95">
 
-<div class="col-12" style="align-self:center;">
-  <div class="column" style="align-self: center;">
-    <img src="./Figures/Goldy.png" alt="UMN Goldy M Logo" style="width:35vw; padding-left: 3%;">
-    <img src="./Figures/NCPhoto.png" alt="Grant Goejen" style="width:26.5vw">
-    <img src="./Figures/DoubleT.png" alt="Texas Tech Double T" style="width:22vw">
+<div style="margin-left: 1.5vw;margin-right:1.5vw">
+    <div class="col-100">
+    <div style="display: flex; justify-content: center;"">
+      <span class="col-35" style="align-self:center; margin-left: 1vw; margin-right: 1vw; ">
+        <img src="./Figures/Goldy.png" alt="UMN Goldy M Logo" style="width:100%">
+      </span>
+
+      <span class="col-25" style="align-self:center;margin-left: 1vw; margin-right: 1vw;">
+        <img src="./Figures/NCPhoto.png" alt="Grant Goejen" style="width:100%">
+      </span>
+
+      <span class="col-21" style="align-self:center; margin-left: 1vw; margin-right: 1vw">
+        <img src="./Figures/DoubleT.png" alt="Texas Tech Double T" style="width:100%">
+      </span>
+    </div>
+
   </div>
 </div>
 <br>
 
 <h1>About Me</h1>
 <hr><hr><br>
-I am currently a doctoral candidate with the Arnold Research laboratory at the University of Minnesota Department of Civil, Environmental and Geo Engineering (anticipated graduation: June 2023) and a certified EIT in the states of Minnesota and Texas. I hail from Texas where I studied Environmental Engineering at Texas Tech University where I received my Masters and Bachelors of Environmental Engineering. After I complete my work here at UMN I hope to continue my work as a post-doctoral scholar before going to work as a subject expert in hazardous waste site investigation and remediation. My current research (<a href="currentprojects.html">highlighted here</a>) focuses on environmental fate and transport of two classes of insecticides: <b><em>Neonicotinoids and Fipronil</em></b>. My research aims to identify the extent of neonicotinoid and fipronil presence in natural surface and groundwater and soil systems and track their degradation and removal through different treatment and remediation strategies.
+I'm a doctoral candidate with the Arnold Research laboratory at the University of Minnesota Department of Civil, Environmental and Geo Engineering (anticipated graduation: June 2023) and a certified EIT in the states of Minnesota and Texas. Originally from Texas, I studied Environmental Engineering at Texas Tech University where I received my Masters and Bachelors of Science in Environmental Engineering at Texas Tech University. Following completion of my masters degree I joined the University of Minnesota continue my work in environmental chemistry in the Arnold Laboratory.  My current area of interest, highlighted in the <a href="currentprojects.html">researh interests</a> section, focuses on environmental fate and transport of two classes of agricultural products: <b><em>Neonicotinoids and Fipronil</em></b>. My research aims to identify the extent of neonicotinoid and fipronil presence in surface waters, groundwater, water/wastewater treatment plants, and in soil systems while tracking trends in degradation and removal through various treatment and remediation processes. 
+<br><br>
+Following my impeding graduation in June 2023 I hope to continue my work as an industry-focused postdoctoral scholar before going to work as a subject expert in hazardous waste site investigation and remediation.
 <br><br>
 
 <div class = "attn">
@@ -87,6 +100,8 @@ I am currently a doctoral candidate with the Arnold Research laboratory at the U
   </center>
 </div>
 
+<br>
+
 <h1><a>Research Interests</a></h1>
 
 <hr><hr>
@@ -95,7 +110,7 @@ I am currently a doctoral candidate with the Arnold Research laboratory at the U
 My research focuses on occurrence and fate of first generation of neonicotinoids (i.e. classical neonicotinoids) and nipronil in the environment. My research focus includes:
 
 <br>
-<div class = "col-12">
+<div style="padding-left: 2vw">
 <ul>
   <li>Fate in surface water systems.</li>
   <li>Fate in groundwater systems.</li>
@@ -112,25 +127,29 @@ My research focuses on occurrence and fate of first generation of neonicotinoids
 <br>
 <hr><hr>
 <br>
+
 I have a wide variety of interests that covers a large knowledge base. My previous and current work emcompoases a large variety of fields, inlcuding topics such as:
 
-<div class = "col-12">
-<ul>
-  <li>Environmental Chemistry, Engineering, Toxicology,</li>
-  <li>Quantitative Analytical Techniques (HPLC, UHPLC, MS, LC-MS, LC-MS/MS, LC-MS-QTOF, UvVis), </li>
-  <li>Computational Statistic (bayesian and frequentist) and Modeling (R, Python), </li>
-  <li>Computational Hydralucis and Hydrology,</li>
-  <li>Fate and Transport Modeling,</li>
-  <li>CAD Drafting and GIS Analysis, </li>
-  <li>Database and Information Management,</li>
-  <li>Laboratory Management, </li>
-  <li>Field Operations,</li>
-  <li>Community Engagement,</li>
-  <li>Collaboration with Federal, State, and Local Municipal Agencies.</li>
-</ul>
-<br>
+<div style="padding-left: 2vw">
+  <ul>
+    <li>Environmental Chemistry, Engineering, Toxicology,</li>
+    <li>Quantitative Analytical Techniques (HPLC, UHPLC, MS, LC-MS, LC-MS/MS, LC-MS-QTOF, UvVis), </li>
+    <li>Computational Statistic (bayesian and frequentist) and Modeling (R, Python), </li>
+    <li>Computational Hydralucis and Hydrology,</li>
+    <li>Fate and Transport Modeling,</li>
+    <li>CAD Drafting and GIS Analysis, </li>
+    <li>Database and Information Management,</li>
+    <li>Laboratory Management, </li>
+    <li>Field Operations,</li>
+    <li>Community Engagement,</li>
+    <li>Collaboration with Federal, State, and Local Municipal Agencies.</li>
+  </ul>
+</div><br>
+
+
 For more information, I urge you to take a look at my circum vitae <a href="cv.html">here!</a>
-</div>
+
+
 
 <h1>Contact Information</h1>
 <hr><hr>
@@ -151,6 +170,7 @@ Last Updated: 2022.08.23
 
 <br><br>
 
+</div>
 </div>
 </body>
 </html>
