fixed images on 'coming soon' page

--- a/ComingSoon.html
+++ b/ComingSoon.html
@@ -74,14 +74,24 @@
   <hr><hr>
   <br><br>
 
-  <div class="col-12">
-    <div class="column" style="align-items: center">
-      <img src="./Figures/Goldy.png" alt="UMN Goldy M Logo" style="width:36vw; padding: 2.5pt;">
-      <img src="./Figures/NCPhoto.png" alt="Grant Goejen" style="width:26.5vw; padding: 2.5pt;">
-      <img src="./Figures/DoubleT.png" alt="Texas Tech Double T" style="width:22vw; padding: 2.5pt;">
+  <div style="margin-left: 1.5vw;margin-right:1.5vw">
+    <div class="col-100">
+    <div style="display: flex; justify-content: center;"">
+      <span class="col-35" style="align-self:center; margin-left: 1vw; margin-right: 1vw; ">
+        <img src="./Figures/Goldy.png" alt="UMN Goldy M Logo" style="width:100%">
+      </span>
+
+      <span class="col-25" style="align-self:center;margin-left: 1vw; margin-right: 1vw;">
+        <img src="./Figures/NCPhoto.png" alt="Grant Goejen" style="width:100%">
+      </span>
+
+      <span class="col-21" style="align-self:center; margin-left: 1vw; margin-right: 1vw">
+        <img src="./Figures/DoubleT.png" alt="Texas Tech Double T" style="width:100%">
+      </span>
     </div>
+
   </div>
-  <br>
+</div>
 
 
 <h1>Contact Information</h1>
